gcc/testsuite/rust/rustc/ui/span/issue-36530.rs
// gate-test-custom_inner_attributes

#![feature(register_attr)]

#![register_attr(foo)]

#[foo]
mod foo {
    #![foo] // { dg-error ".E0658." "" { target *-*-* } }
}

fn main() {}

